handsover to emergent